--- a/index.html
+++ b/index.html
@@ -1,20 +1,21 @@
 <html>
     <head>
+        <!-- Bootstrap CSS -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+        <!-- 追加用 CSS -->
         <link rel="stylesheet" type="text/css" href="style.css">
+
     </head>
     <body>
-        <div class="split">
-            <div class="split-item split-left">
-                <div class="split-left__inner">
-                    left
-                </div>
-            </div>
-            <div class="split-item split-right">
-                <div class="split-right__inner">
-                    right
-                </div>
-            </div>
-        </div>
+
+        <!-- Bootstrap JS -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+        
+        <header>Header</header>
+        <nav>Nav</nav>
+        <main>Main</main>
+        
     </body>
 </html>
 
