アップロードページひとまず完成

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
             <input class="form-control" type="text" placeholder="Search">
             <button href="#">
-                <i class="bi bi-search yk-bi-icon"></i>
+                <i class="bi bi-upload yk-bi-icon"></i>
             </button>
 
             <a class="nav-link" href="#">
@@ -49,13 +49,13 @@
                             <li class="nav-item">
                                 <a class="nav-link active" href="#">
                                     <i class="bi bi-house yk-bi-icon"></i>
-                                    <div class="yk-bi-text">Home</div>
+                                    <div class="yk-text-icon">Home</div>
                                 </a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link active" href="#">
                                     <i class="bi bi-balloon yk-bi-icon"></i>
-                                    <div class="yk-bi-text">Hot</div>
+                                    <div class="yk-text-icon">Hot</div>
                                 </a>
                             </li>
                         </ul>
