詳細画面まで完成

--- a/upload.html
+++ b/upload.html
@@ -19,7 +19,7 @@
         <div class="container-fluid yk-center">
 
             <div class="yk-text-title yk-left">
-                ルームのアップロード
+                アップロード
             </div>
     
             <!-- todo: ドラッグ&ドロップできるように -->
