--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     
-                    <div class="modal-body">
+                    <div class="modal-body yk-center">
                         <iframe src="login.html"></iframe>
                     </div>
                     
