--- a/login.html
+++ b/login.html
@@ -28,9 +28,8 @@
         <!-- Bootstrap JS -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
         
-        <div class="container-fluid yk-center">
-            <div class="g-signin2" data-onsuccess="onSignIn"></div>
-        </div>
+        <br>
+        <div class="g-signin2 yk-block-center" data-onsuccess="onSignIn"></div>
 
     </body>
 </html>
