--- a/src/header.html
+++ b/src/header.html
@@ -126,7 +126,7 @@
                     }
                 }
 
-                xhr.open('GET', 'http://localhost:8000/api/rooms') 
+                xhr.open('GET', '/api/rooms') 
                 xhr.send()
 
             }
