--- a/src/header.html
+++ b/src/header.html
@@ -5,7 +5,7 @@
     </a>
     
     <input class="form-control" type="text" placeholder="Search">
-    <button id="search_button">
+    <button id="search-button">
         <i class="bi bi-search yk-bi-icon"></i>
     </button>
     
