--- a/src/viewer.html
+++ b/src/viewer.html
@@ -34,7 +34,7 @@
                 <p class="yk-left">コメント</p>
             </div>
 
-            <div id="card-list" class="col-md-3 row"></div>
+            <div class="col-md-3 row" id="card-list"></div>
 
         </div>
 
