detail.htmlのエラー修正

--- a/src/detail.html
+++ b/src/detail.html
@@ -18,7 +18,7 @@
         <br>
     
         <div class="container-fluid row">     
-            <form id="upload-form" class="col-md-8">
+            <form id="detail-form" class="col-md-8">
 
                 <label for="input-title" class="yk-box-caption yk-left">タイトル(必須)</label>
                 <input id="input-title" class="yk-input-text" type="text">
