検索機能実装

--- a/src/header.html
+++ b/src/header.html
@@ -4,7 +4,7 @@
         <img src="./img/Yuri-Kabe_logo.png" width="200">
     </a>
     
-    <input class="form-control" type="text" placeholder="Search">
+    <input class="form-control" type="text" placeholder="Search" id="search-form">
     <button id="search-button">
         <i class="bi bi-search yk-bi-icon"></i>
     </button>
