フォームの送信成功

--- a/src/header.html
+++ b/src/header.html
@@ -80,7 +80,7 @@
             </div>
             
             <div class="modal-body yk-center">
-                <iframe src="login.html"></iframe>
+                <iframe src="login.html" class="yk-iframe"></iframe>
             </div>
             
         </div>
