--- a/src/success.html
+++ b/src/success.html
@@ -3,6 +3,6 @@
         <meta charset="UTF-8">
     </head>
     <body>
-        <p>Login Success!!</p>
+        <p>Success!!</p>
     </body>
 </html>
