--- a/src/detail.html
+++ b/src/detail.html
@@ -9,7 +9,15 @@
         <!-- 追加用 CSS -->
         <link rel="stylesheet" type="text/css" href="style.css">
 
+        <!-- Sign In With Google -->
+        <script src="https://accounts.google.com/gsi/client" async defer></script>
         <script>
+
+            function onSignIn(credentialResponse) {
+                var credential = document.getElementById("credential")
+                credential.value = credentialResponse.credential
+            }
+
             url_obj = new URL(decodeURIComponent(document.location.href))
             room_id = url_obj.searchParams.get("room_id")
             console.log(room_id)
@@ -18,6 +26,14 @@
     </head>
     <body>
 
+        <div
+            id="g_id_onload"
+            data-client_id="248112257157-bqfdj7g676v0b9j5m747cveuchoj4p5v.apps.googleusercontent.com"
+            data-context="signin"
+            data-callback="onSignIn"
+            data-auto_select="true"
+        ></div>
+
         <!-- Bootstrap JS -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
         
@@ -25,6 +41,9 @@
     
         <div class="container-fluid row">     
             <form id="detail-form" class="col-md-8">
+
+                <!-- id_token -->
+                <input type="hidden" name="credential" id="credential" value="dummy-before">
 
                 <label for="input-title" class="yk-box-caption yk-left">タイトル(必須)</label>
                 <input id="input-title" name="input-title" class="yk-input-text" type="text">
