ログイン時セッション作成するように

--- a/src/login.html
+++ b/src/login.html
@@ -22,7 +22,7 @@
 
         <div id="g_id_onload"
             data-client_id="248112257157-bqfdj7g676v0b9j5m747cveuchoj4p5v.apps.googleusercontent.com"
-            data-login_uri="/api/registrationCheck" 
+            data-login_uri="/api/signIn" 
             data-auto_prompt="false">
         </div>
         <div class="g_id_signin"
