サムネイル対応

--- a/src/detail.html
+++ b/src/detail.html
@@ -67,7 +67,7 @@
                                 <p class="center">サムネイルを<br>アップロード</p>
                             </div>
                         </label>
-                        <input id="input-thumbnail" type="file">
+                        <input id="input-thumbnail" name="input-thumbnail" type="file">
                     </div>
 
                     <div class="col-md-5">
