--- a/src/viewer.html
+++ b/src/viewer.html
@@ -43,6 +43,7 @@
             room_id = url_obj.searchParams.get("room_id")
             console.log('/api/static/room/'+room_id)
             room_iframe.contentDocument.location.replace('/api/static/room/'+room_id)
+            fetch('/api/countViews/'+room_id, {method: "GET",})
         </script>
 
         <script src='./tools.js'></script>
