--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,8 @@
         
         </div>
 
+        <footer id="footer" class="yk-contact">☆ご意見・ご要望はこちらまで → gakki.uec15@gmail.com</footer>
+
         <script src='./tools.js'></script>
 
         <script>
