--- a/src/upload.html
+++ b/src/upload.html
@@ -48,6 +48,36 @@
         </div>
 
         <script>
+
+            var room_id 
+
+            // 1. roomの作成
+            var mockObj = {
+                    "room_id" : "xxx",
+                    "author" : "xxx"
+                }
+
+            window.onload = function(){
+                var xhr = new XMLHttpRequest()
+                xhr.onreadystatechange = function() {
+                    if (xhr.readyState === XMLHttpRequest.DONE) {
+                        var status = xhr.status;
+                        if (status === 0 || (status >= 200 && status < 400)) {
+                            console.log("OK. Status: " + status)
+                            var res = JSON.parse(xhr.response)
+                            console.log(res)
+                            room_id = res.id
+                            console.log("room id is: " + room_id)
+                        }else{
+                            console.log("Error. Status: " + status)
+                        }
+                    }
+                }
+                xhr.open('POST', '/api/rooms')
+                xhr.send(JSON.stringify(mockObj)) 
+            }
+
+            // 2. 作成されたroomにファイルをアップロード
             const form = document.getElementById('upload-form')
             const error_msg = document.getElementById('error-msg')
 
@@ -81,7 +111,9 @@
                     }
                 }
                 
-                xhr.open('POST', '/api/upload')
+                var req_url = '/api/upload?file_type=motion&room_id='+room_id
+                console.log(req_url)
+                xhr.open('POST', req_url)
                 xhr.send(formData)
 
             });
