サムネアップロード対応

--- a/src/detail.html
+++ b/src/detail.html
@@ -33,6 +33,10 @@
 
                 <div class="yk-box-space"></div>
                 
+            </form>
+
+            <form id="thumbnail-form" class="col-md-4">
+
                 <div class="yk-box-caption yk-left">サムネイル(jpeg/png)</div>
 
                 <div class="container-fluid row">
@@ -45,13 +49,15 @@
                                 <p class="center">サムネイルを<br>アップロード</p>
                             </div>
                         </label>
-                        <input id="input-thumbnail" name="input-thumbnail" type="file">
+                        <input id="input-thumbnail" name="file-input" type="file">
                     </div>
 
                     <!-- todo: サムネのプレビューを表示 -->
 
                 </div>
+
             </form>
+
 
             <!-- todo: iframeでプレビュー表示 -->
             <!-- todo: ルームidを表示 -->
@@ -96,6 +102,40 @@
                 xhr.open('PUT', '/api/rooms/'+room_id)
                 xhr.send(JSON.stringify(formDataObj)) //formDataをjsonに変換して送信(room構造体に対応している必要あり)
             }
+
+            // サムネアップロード対応
+            const thumbnail_form = document.getElementById('thumbnail-form')
+            thumbnail_form.addEventListener('change', (e) => {
+                let type = e.target.type;
+                console.log('onChange', type);
+            });
+
+            thumbnail_form.addEventListener('input', (e) => {
+                let type = e.target.type;
+                console.log('onInput', type)
+
+                var xhr = new XMLHttpRequest()
+                var formData = new FormData(thumbnail_form)
+
+                xhr.onreadystatechange = function() {
+                    if (xhr.readyState === XMLHttpRequest.DONE) {
+                        var status = xhr.status;
+                        if (status === 0 || (status >= 200 && status < 400)) {
+                            console.log("OK. Status: " + status)
+                            window.location=xhr.responseURL //リダイレクトに必要
+                        }else{
+                            console.log("Error. Status: " + status)
+                            error_msg.innerHTML = xhr.response
+                        }
+                    }
+                }
+                
+                var req_url = '/api/upload?file_type=thumbnail&room_id='+room_id
+                console.log(req_url)
+                xhr.open('POST', req_url)
+                xhr.send(formData)
+
+            });
 
         </script>
 
