モデル＆モーション両アップデート対応

--- a/src/detailForm.html
+++ b/src/detailForm.html
@@ -1,4 +1,4 @@
-<div id="formAreaAreaArea">
+<div id="formAreaAreaAreaArea">
 
     <div class="container-fluid row">     
         <form id="detail-form" class="col-md-8">
@@ -68,7 +68,7 @@
                 var status = xhr.status;
                 if (status === 0 || (status >= 200 && status < 400)) {
                     console.log("OK. Status: " + status)
-                    $("#formAreaAreaArea").load("success.html", function(){
+                    $("#formAreaAreaAreaArea").load("success.html", function(){
                         console.log("room create success")
                     })
                 }else{
